--- a/deploy/local-path-storage.yaml
+++ b/deploy/local-path-storage.yaml
@@ -58,7 +58,7 @@ spec:
       serviceAccountName: local-path-provisioner-service-account
       containers:
       - name: local-path-provisioner
-        image: rancher/local-path-provisioner:v0.0.11
+        image: registry.cn-beijing.aliyuncs.com/yunionio/local-path-provisioner:v0.0.11
         imagePullPolicy: IfNotPresent
         command:
         - local-path-provisioner
